--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Heartbeat Music Player</string>
+
+
+    <!-- Text View -->
+    <string name="song_title">Temporary title</string>
+    <string name="start_time">0:00</string>
+    <string name="total_time">0:00</string>
+
 </resources>
